@@ -9,7 +9,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --aux-dir=build-aux --no-libtool --macro-prefix=gl getopt strndup vasprintf
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --aux-dir=build-aux --no-libtool --macro-prefix=gl fseeko ftello getopt strndup vasprintf
 
 AUTOMAKE_OPTIONS = 1.5 gnits
 
@@ -71,6 +71,24 @@ EXTRA_DIST += float_.h
 
 ## end   gnulib module float
 
+## begin gnulib module fseeko
+
+
+EXTRA_DIST += fseeko.c
+
+EXTRA_libgnu_a_SOURCES += fseeko.c
+
+## end   gnulib module fseeko
+
+## begin gnulib module ftello
+
+
+EXTRA_DIST += ftello.c
+
+EXTRA_libgnu_a_SOURCES += ftello.c
+
+## end   gnulib module ftello
+
 ## begin gnulib module getopt
 
 BUILT_SOURCES += $(GETOPT_H)
@@ -101,6 +119,15 @@ libgnu_a_SOURCES += gettext.h
 LINK_WARNING_H=$(top_srcdir)/build-aux/link-warning.h
 
 ## end   gnulib module link-warning
+
+## begin gnulib module lseek
+
+
+EXTRA_DIST += lseek.c
+
+EXTRA_libgnu_a_SOURCES += lseek.c
+
+## end   gnulib module lseek
 
 ## begin gnulib module size_max
 
