@@ -16,6 +16,10 @@
 	* configure.ac, NEWS, doc/cvlview.texi: Bump version to 0.2.0.
 	* src/channel_selector.h, src/channel_selector.cpp: Preserve channel
 	setting when switching between data sets in the same data file.
+	* gnulib/m4/lseek.m4, gnulib/m4/fseeko.m4, gnulib/m4/ftello.m4, 
+	gnulib/m4/gnulib-comp.m4, gnulib/m4/gnulib-cache.m4, gnulib/fseeko.c,
+	gnulib/lseek.c, gnulib/ftello.c, gnulib/Makefile.am: Add gnulib fseeko
+	and ftello modules for W32 portability.
 
 2007-10-11  Martin Lambers <marlam@marlam.de>
 
